More SRIOV goodies

--- a/yaml/rdma/sriov-network-node-policy.yaml
+++ b/yaml/rdma/sriov-network-node-policy.yaml
@@ -11,7 +11,7 @@ spec:
 #    vendor: "15b3"
 #    pfNames: ["ens8f0np0#0-7"]
   nodeSelector:
-    feature.node.kubernetes.io/pci-15b3.present: "true"
+#    feature.node.kubernetes.io/pci-15b3.present: "true"
   numVfs: 8
 #  priority: 90
   isRdma: true
