--- a/yaml/rdma/sriov-legacy-cluster-policy.yaml
+++ b/yaml/rdma/sriov-legacy-cluster-policy.yaml
@@ -6,7 +6,8 @@ spec:
   ofedDriver:
     image: doca-driver
     repository: nvcr.io/nvidia/mellanox
-    version: 24.10-0.7.0.0-0
+    version: 25.01-0.6.0.0-0
+#    version: 24.10-0.7.0.0-0
     startupProbe:
       initialDelaySeconds: 10
       periodSeconds: 20
