Added iperf results

--- a/yaml/rdma/sriov-test-pod.yaml
+++ b/yaml/rdma/sriov-test-pod.yaml
@@ -7,7 +7,8 @@ metadata:
     k8s.v1.cni.cncf.io/networks: sriov-network
 spec:
   nodeSelector: 
-    kubernetes.io/hostname: mocr4pcc02u31  
+    kubernetes.io/hostname: mocr4pcc02u24  
+    #kubernetes.io/hostname: mocr4pcc02u31  
 #    kubernetes.io/hostname: nvd-srv-32.nvidia.eng.rdu2.dc.redhat.com
   serviceAccountName: rdma
   containers:
