--- a/yaml/rdma/sriov-test-pod-dos.yaml
+++ b/yaml/rdma/sriov-test-pod-dos.yaml
@@ -7,7 +7,8 @@ metadata:
     k8s.v1.cni.cncf.io/networks: sriov-network
 spec:
   nodeSelector: 
-    kubernetes.io/hostname: mocr4pcc02u32 
+    kubernetes.io/hostname: mocr4pcc02u25 
+    #kubernetes.io/hostname: mocr4pcc02u32 
 #    kubernetes.io/hostname: nvd-srv-32.nvidia.eng.rdu2.dc.redhat.com
   serviceAccountName: rdma
   containers:
