--- a/yaml/rdma/sriov-test-pod.yaml
+++ b/yaml/rdma/sriov-test-pod.yaml
@@ -7,12 +7,15 @@ metadata:
     k8s.v1.cni.cncf.io/networks: sriov-network
 spec:
   nodeSelector: 
-    kubernetes.io/hostname: mocr4pcc02u24  
+    kubernetes.io/hostname: mocr4pcc02u31  
+    #kubernetes.io/hostname: mocr4pcc02u24  
     #kubernetes.io/hostname: mocr4pcc02u31  
 #    kubernetes.io/hostname: nvd-srv-32.nvidia.eng.rdu2.dc.redhat.com
   serviceAccountName: rdma
   containers:
   - image: quay.io/jschless/gpu-tools:0.0.6 
+  #- image: quay.io/jschless/gpu-tools:cuda12.4 
+  #- image: quay.io/jschless/gpu-tools:0.0.6 
 #  - image: quay.io/redhat_emp1/ecosys-nvidia/gpu-operator:tools
     name: sriovlegacy-workload-uno
 #    command:
