--- a/yaml/rdma/multinic/ipassign_4.yaml
+++ b/yaml/rdma/multinic/ipassign_4.yaml
@@ -10,6 +10,7 @@ spec:
     - name: eno5np0
       type: ethernet
       state: up
+      mtu: 9000
       ipv4:
         enabled: true
         address:
@@ -19,6 +20,7 @@ spec:
     - name: eno6np0
       type: ethernet
       state: up
+      mtu: 9000
       ipv4:
         enabled: true
         address:
@@ -28,6 +30,7 @@ spec:
     - name: eno7np0
       type: ethernet
       state: up
+      mtu: 9000
       ipv4:
         enabled: true
         address:
@@ -37,6 +40,7 @@ spec:
     - name: eno8np0
       type: ethernet
       state: up
+      mtu: 9000
       ipv4:
         enabled: true
         address:
