--- a/yaml/rdma/sr4n1_hn.yaml
+++ b/yaml/rdma/sr4n1_hn.yaml
@@ -3,19 +3,15 @@ kind: Pod
 metadata:
   name: sr4n1
   namespace: default
-#  annotations:
-#    k8s.v1.cni.cncf.io/networks: default/network-cx7-eno5np0,default/network-cx7-eno6np0,default/network-cx7-eno7np0,default/network-cx7-eno8np0
 spec:
   dnsPolicy: ClusterFirstWithHostNet #DNS not resolving MASTER_ADDR
   hostNetwork: true
   hostIPC: true
   nodeSelector: 
     kubernetes.io/hostname: moc-r4pcc02u25
-    #kubernetes.io/hostname: mocr4pcc02u25
-# moc-r4pcc02u25 
-#  serviceAccountName: rdma
+  serviceAccountName: rdma
   containers:
-  - image: quay.io/jschless/gpu-tools:0.0.6 
+  - image: quay.io/edge-infrastructure/nvidia-tools:0.1.5     # quay.io/jschless/gpu-tools:0.0.6 
     name: sr4n1
     securityContext:
       privileged: true
@@ -24,15 +20,7 @@ spec:
     resources:
       limits:
         nvidia.com/gpu:         4
-#        openshift.io/cx7_eno5:  1
-#        openshift.io/cx7_eno6:  1
-#        openshift.io/cx7_eno7:  1
-#        openshift.io/cx7_eno8:  1
 
       requests:
         nvidia.com/gpu:         4
-#        openshift.io/cx7_eno5:  1
-#        openshift.io/cx7_eno6:  1
-#        openshift.io/cx7_eno7:  1
-#        openshift.io/cx7_eno8:  1
 
